# GitStats

./: CMakeLists.txt  main.cpp
src/: CmakeLists.txt  main.cpp
src/corporate/: CMakeLists.txt  corporate.hpp
src/employee/: CmakeLists.txt  employee.cpp  employee.hpp
src/human-being/: CmakeLists.txt  human-being.hpp
src/janitor/: CMakeLists.txt  janitor.cpp  janitor.hpp
src/manager/: CmakeLists.txt  manager.cpp  manager.hpp
src/manager_employee/: CmakeLists.txt  manageremployee.cpp  manageremployee.hpp
src/utility/: CMakeLists.txt  utility.hpp
